--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h3>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h3>
     </header>
     <nav>
-        <a href="#">Hom e</a>
+        <a href="#">Home</a>
         <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
         <a href="#">Fale Conosco</a>
-        <a href="index.html">Curiosidade sobre o Gil</a>
+        <a href="index.html">Curiosidade</a>
     </nav>
     <main>
                     <h1>História do Mascote do Android</h1>
